fixed some spacing on landing page, updated image names

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -13,36 +13,98 @@ body {
     background: #efeee7;
   }
   
-  h1 {
-    font-size: 60px;
-    background: rgb(184, 51, 51);
+  .col-md-7 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
-  
-  .row-1 {
+
+  .col-md-5 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  /* .row-1 {
     padding: 20px 0;
     margin: 0;
     margin-bottom: 20px;
     font-size: 28px;
     color: rgb(94, 57, 155);
     text-align: center;
+  } */
+  
+  h1 {
+    color: #02171d;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
   }
   
   h2 {
-    font-size: 24px;
+    color: #02171d;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
   }
-  
+
   a {
-    color: #d21034;
+    color: #070001;
   }
   
   /* Selecting elements by class */
-  .container {
+  /* .container {
     width: 1024px;
     margin: 0 auto;
   }
-  
+   */
+
+
+  /* .box-set {
+    position: relative;
+    height: 1000px;
+    width: 2000px;
+    background: darkgray;
+  } */
+
+
+  .box-1 {
+    /* relative positioning */
+    position: relative;
+    padding: 5px;
+    margin: 6px;
+    background: #feffff;
+    border: 2px solid black;
+  }
+
+  .img-size-1 {
+    max-width: 205px;
+    max-height: 205px;
+    width: 100%;
+    height: auto;
+  }
+
+  .img-size-2 {
+    max-width: 300px;
+    max-height: 300px;
+    width: 100%;
+    height: auto;
+  }
+
+  .textwrap {
+    float: left;
+    margin: 10px;
+  }
+
+  .box-3 {
+    position: relative;
+    padding: 5px;
+    margin: 6px;
+    font-weight: 500;
+    color: black;
+    border: 2px solid black;
+  }
+
   /* Selecting elements by ID */
-  #main-bio,
+  /* #main-bio,
   #contact-info,
   #bio-image {
     float: left;
@@ -51,24 +113,4 @@ body {
   #figure {
     position: relative;
   }
-  
-  #bio-name {
-    position: absolute;
-    top: 150px;
-    left: 30px;
-  }
-  
-  #main-bio {
-    width: 70%;
-  }
-  
-  #contact-info {
-    width: 30%;
-  }
-  
-  #bio-image {
-    width: 200px;
-    height: 200px;
-    margin-right: 20px;
-  }
-  
+   */ 
